# fastapi-workspace-dockerized

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  compose.yml  pyproject.toml  xDockerfile
app/: main.py
