[tool.poetry]
name = "learn-fastapi"
version = "0.1.0"
description = ""
authors = ["Ali Sunjaya <ali.sunjayaa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Uiadmin-FastApi = "^1.0.3"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
